--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -21,8 +21,9 @@ hierarchy:
     #lookup_key: Sweagle_data_lookup # sweagle data_lookup backend
     data_hash: sweagle_data_hash  # sweagle data_hash backend
     options:
+      # All options are optional as default values are available in data_hash code
+      sweagle_args: "<YOUR_ARGS>"    #ex: "<YOUR_NODE> for returnDataForNode exporter, like sample-test"
       #sweagle_cds: "<YOUR_CDS>"
-      sweagle_node: "<YOUR NODE>"
-      #sweagle_tenant: "<YOUR_TENANT>"
-      #sweagle_tenant: "https://testing.sweagle.com"
+      #sweagle_parser: "<YOUR_EXPORT_PARSER>"    #ex: "returnDataForNode"
+      #sweagle_tenant: "<YOUR_TENANT>"    #ex: "https://testing.sweagle.com"
       #sweagle_token: "<YOUR_TOKEN>"
