handle default node_path in uploadFacts

--- a/ansible/roles/sweagle/uploadFacts/tasks/main.yml
+++ b/ansible/roles/sweagle/uploadFacts/tasks/main.yml
@@ -11,7 +11,7 @@
 - name: ALL - Build upload_data_list
   set_fact:
     upload_data_list: "[{ 'file_path': '/tmp/ansible_facts.json',\
-      'node_path': \"ansible_facts,{{ ansible_hostname }}\",\
+      'node_path': \"{{ global.node_path | default('ansible_facts') }},{{ ansible_hostname }}\",\
       'format': 'json', 'allow_delete': true, 'auto_approve': true }]"
 
 - name: ALL - Upload facts to SWEAGLE
