add taskrunner container

--- a/docker/taskrunner/Dockerfile
+++ b/docker/taskrunner/Dockerfile
@@ -1,14 +1,20 @@
 FROM openjdk:8-jdk-alpine
 
+# This is optional ENV parameters that you can set to change taskRunner connection settings to SWEAGLE CORE
+#ENV SWEAGLE_TOKEN=XXX \
+#    SWEAGLE_USER=taskrunner_user \
+#    SWEAGLE_PASSWORD=taskrunner_password
+
 RUN addgroup sweagle && \
     adduser -S -G sweagle sweagle && \
 		mkdir -p /opt/SWEAGLE
 
 COPY ./package /opt/SWEAGLE/
 
-RUN chown -R sweagle:sweagle /opt/SWEAGLE
+RUN chmod +x /opt/SWEAGLE/scripts/*.sh && \
+    chown -R sweagle:sweagle /opt/SWEAGLE
 
 USER sweagle
-WORKDIR /opt/SWEAGLE/bin/taskRunner
-CMD ["java","-jar","task-runner-1.0.0.jar"]
+
+CMD [ "/opt/SWEAGLE/scripts/startTaskRunner.sh" ]
 EXPOSE 8082
