change version tag and port

--- a/docker/core/Dockerfile
+++ b/docker/core/Dockerfile
@@ -2,7 +2,8 @@ FROM openjdk:8-jdk-alpine
 RUN apk add --no-cache bash
 
 # This is optional ENV parameters that you can set to change connection settings to VAULT
-#ENV VAULT_ROOT_TOKEN=XXX
+#ENV VAULT_ROOT_TOKEN=XXX \
+#    SWEAGLE_LICENSE=XXX
 
 # VAULT volume is shared between sweagle-core and vault containers to be able to use vault root-token key in sweagle
 # Please, note that /vault volume must be created here in order to change owner before sharing
