--- a/ansible/roles/sweagle/installCLI/tasks/main.yml
+++ b/ansible/roles/sweagle/installCLI/tasks/main.yml
@@ -25,9 +25,14 @@
     dest: "{{ cli_installation_folder }}/db.json"
   when: use_db_file
 
-- name: Setup CLI Options
+# If there no db.json file existing, create it by configuring CLI
+- name: Setup CLI Tenant
   shell: "{{ cli_installation_folder }}/sweagle options  --newenv {{ sweagle_url }} --newusername ansible --newtoken {{ sweagle_token }}"
   when: not use_db_file
+
+- name: Setup CLI Proxy
+  shell: "{{ cli_installation_folder }}/sweagle options  --host {{ proxy.host }} --port {{ proxy.port }} --name {{ proxy.user }} --key {{ proxy.password }}"
+  when: not use_db_file and use_proxy
 
 - name: Setup CLI Settings
   shell: "{{ cli_installation_folder }}/sweagle settings --ignoreSSL"
