--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -7,11 +7,11 @@
 # Variable to use proxy with CLI
 # Use of proxy with API is automatic with Ansible as long as http_proxy and https_proxy environment variables are set
 use_proxy: no
-proxy:
-  host: http://localhost
-  port: 8080
-  user: "proxy_user"
-  password: "proxy_password"
+#proxy:
+#  host: http://localhost
+#  port: 8080
+#  user: "proxy_user"
+#  password: "proxy_password"
 
 ################################################################
 #################         TENANT PARAMS        #################
