distinct between file and data upload

--- a/ansible/all.yml
+++ b/ansible/all.yml
@@ -18,7 +18,7 @@
   roles:
 ### OK ###
     - sweagle/info
-    - sweagle/uploadData
+    - sweagle/uploadFile
     - sweagle/uploadDir
     - sweagle/createChangeset
     - sweagle/approveChangeset
