--- a/ansible/roles/sweagle/uploadDir/tasks/main.yml
+++ b/ansible/roles/sweagle/uploadDir/tasks/main.yml
@@ -9,11 +9,11 @@
     excludes: "{{ excludes }}"
   register: find_result
 
-- name: ALL - Initialise upload_data_list
+- name: ALL - Initialise
   set_fact:
     upload_data_list: []
 
-- name: Build upload_data_list for linux
+- name: Build  for linux
   set_fact:
     upload_data_list: "{{ upload_data_list }} + [{ 'file_path': \"{{ item.path }}\",\
       'node_path': \"{{ item.path | replace('/',',') | regex_replace('^,','') }}\",\
@@ -37,6 +37,6 @@
 #  debug:
 #    var: upload_data_list
 
-- name: ALL - Call uploadData role
+- name: ALL - Call uploadFile role
   include_role:
-    name: sweagle/uploadData
+    name: sweagle/uploadFile
