--- a/azure-devops/Sweagle_Extension/publish-extension-pipeline.yml
+++ b/azure-devops/Sweagle_Extension/publish-extension-pipeline.yml
@@ -86,6 +86,7 @@ stages:
               updateTasksVersionType: 'patch'
               extensionVisibility: 'private' # Change to public if you're publishing to the marketplace
               extensionPricing: 'free'
+            continueOnError: true # ignore warnings that are considered as errors
           - task: CopyFiles@2
             displayName: "Copy Files to: $(Build.ArtifactStagingDirectory)"
             inputs:
