--- a/azure-devops/Sweagle_Extension/buildAndReleaseTask/package.json
+++ b/azure-devops/Sweagle_Extension/buildAndReleaseTask/package.json
@@ -9,7 +9,8 @@
   "author": "Service Now",
   "license": "ISC",
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.11.1"
+    "azure-pipelines-task-lib": "^2.11.1",
+    "xmlbuilder2": "^2.4.0"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.3",
