change SWEAGLE_URL and SWEAGLE_TOKEN variable names

--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -1,6 +1,6 @@
 # SWEAGLE PARAMETERS
-sweagleURL="https://testing.sweagle.com"
-aToken="YOUR_TOKEN_HERE"
+SWEAGLE_URL="https://testing.sweagle.com"
+SWEAGLE_TOKEN="93fc8264-79c3-47fd-82ff-64491f3b1e21"
 
 ##########################################################
 #                    FUNCTIONS
