--- a/linux/sweagle.env
+++ b/linux/sweagle.env
@@ -7,7 +7,7 @@ SWEAGLE_TOKEN="93fc8264-79c3-47fd-82ff-64491f3b1e21"
 ##########################################################
 function apiToken() {
 cat <<EOF
-authorization: Bearer $aToken
+authorization: Bearer $SWEAGLE_TOKEN
 EOF
 }
 
