add hook for install

--- a/helm/plugins/sweagle/plugin.yaml
+++ b/helm/plugins/sweagle/plugin.yaml
@@ -4,3 +4,5 @@ usage: "Retreive config data from Sweagle"
 description: |-
   Get config data from Sweagle for specific CDS and parser.
 command: "$HELM_PLUGIN_DIR/getConfigByCdsParserArgs.sh"
+hooks:
+  install: "$HELM_PLUGIN_DIR/getConfigByCdsParserArgs.sh"
