--- a/puppet/hiera.yaml
+++ b/puppet/hiera.yaml
@@ -23,6 +23,7 @@ hierarchy:
       # All options are optional as default values are available in data_hash code
       sweagle_args: "<YOUR_ARGS>"    #ex: "<YOUR_NODE> for returnDataForNode exporter, like sample-test"
       #sweagle_cds: "<YOUR_CDS>"
+      #sweagle_tag: ""
       #sweagle_parser: "<YOUR_EXPORT_PARSER>"    #ex: "returnDataForNode"
       #sweagle_tenant: "<YOUR_TENANT>"    #ex: "https://testing.sweagle.com"
       #sweagle_token: "<YOUR_TOKEN>"
@@ -38,6 +39,7 @@ hierarchy:
       # IF keynode and keypath are both defined only keypath is taken into account
       #keynode: "<YOUR_NODE>"
       #sweagle_cds: "<YOUR_CDS>"
+      #sweagle_tag: ""
       #sweagle_parser: "<YOUR_EXPORT_PARSER>"    #ex: "returnValueForKey"
       #sweagle_tenant: "<YOUR_TENANT>"    #ex: "https://testing.sweagle.com"
       #sweagle_token: "<YOUR_TOKEN>"
